--- a/sorjuana.html
+++ b/sorjuana.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>1996</title>
+  <title>Sor Juana</title>
 <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -28,7 +28,7 @@
 
 <p>Shinji</p> 
  <p>Ikari?</p>
-  <img src="https://i.imgur.com/KqxgjEi.jpeg">
+  <img src="/">
 </div>
 <!-- partial -->
   
