--- a/sorjuana.html
+++ b/sorjuana.html
@@ -9,25 +9,11 @@
 <body>
 <!-- partial:index.partial.html -->
 <div>
-  <p>Songs</p> 
-  <p>enrich</p> 
-  <p>the</p> 
-  <p>heart.</p>
+  <p>El sueño todo, en fin, lo poseía;</p> 
+  <p>todo, en fin, el silencio lo ocupaba:</p>
+  <p>aun el ladrón dormía;</p>
+  <p>aun el amante no se desvelaba.</p>
 
-<p>They're</p> 
- <p>the</p> 
-  <p>crowning</p> 
-  <p>achievement</p>
-<p>of Lilin</p> 
-  <p>culture</p>
-
-<p>Don't </p>
-<p>you</p> 
- <p>think</p> 
-  <p>so...</p>
-
-<p>Shinji</p> 
- <p>Ikari?</p>
   <img src="1 de sor juana.gif">
 </div>
 <!-- partial -->
