--- a/sorjuana.html
+++ b/sorjuana.html
@@ -9,10 +9,17 @@
 <body>
 <!-- partial:index.partial.html -->
 <div>
-  <p>El sueño todo, en fin, lo poseía;</p> 
-  <p>todo, en fin, el silencio lo ocupaba:</p>
-  <p>aun el ladrón dormía;</p>
-  <p>aun el amante no se desvelaba.</p>
+  <p>El sueño </p> 
+  <p>todo, en fin,</p> 
+  <p>lo poseía;</p> 
+  <p>todo, en fin, el silencio</p>
+  <p>lo ocupaba:</p>
+  <p>aun el 
+  <p>ladrón</p> 
+  <p>dormía;</p>
+  <p>aun el </p> 
+   <p>amante no se</p>
+    <p>desvelaba.</p>
 
   <img src="1 de sor juana.gif">
 </div>
