--- a/sorjuana.html
+++ b/sorjuana.html
@@ -18,7 +18,8 @@
   <p>ladrón</p> 
   <p>dormía;</p>
   <p>aun el </p> 
-   <p>amante no se</p>
+   <p>amante </p>
+    <p> no se</p>
     <p>desvelaba.</p>
 
   <img src="1 de sor juana.gif">
