--- a/sorjuana1.html
+++ b/sorjuana1.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Sor Juana 1</title>
+  <script src="https://unpkg.com/hydra-synth"></script>
 <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-
+<canvas id="myCanvas"></canvas>
+    
+    <script src="/script.js">
+    </script>
 
 <!-- partial -->
   
