--- a/sorjuana1.html
+++ b/sorjuana1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<canvas id="myCanvas"> </canvas>
+<canvas id="myCanvas width="15000px" height="10000px"> </canvas>
     
     <script src="/script.js">
     </script>
