--- a/sorjuana1.html
+++ b/sorjuana1.html
@@ -9,9 +9,21 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<canvas id="myCanvas width="15000px" height="10000px"> </canvas>
-    
-    <script src="/script.js">
+   
+    <script 
+var hydra = new Hydra({
+        canvas: document.getElementById("myCanvas"),
+        detectAudio: false,
+        enableStreamCapture: false,
+      })
+osc(20, 0.01, 1.1)
+	.kaleid(5)
+	.color(2.83,0.91,0.39)
+	.rotate(0, 0.1)
+	.modulate(o0, () => mouse.x * 0.0003)
+	.scale(1.01)
+  	.out(o0)            
+            >
     </script>
 
 <!-- partial -->
