--- a/sorjuana1.html
+++ b/sorjuana1.html
@@ -13,9 +13,7 @@
     <script src="https://unpkg.com/hydra-synth"></script>
   </head>
   <body>
-  <background= " <canvas id="myCanvas" width="1500px" height="1000px"></canvas>    
-    <script src="/script.js">
-    </script>" >
+  <background= src="/script.js">
     
    
 <div>
